# Alex

./: .gitignore  .gitmodules  Alex.cpp  Alex.h  CMakeLists.txt  README.md
include/: Alex.h
include/Graphics/: StaticMesh.h  StaticMeshFactory.h  Vertex.h
src/: Alex.cpp
src/Graphics/: StaticMeshFactory.cpp  Vertex.cpp
